Add new visualizations

--- a/index.Rmd
+++ b/index.Rmd
@@ -50,9 +50,88 @@ if (!dir.exists(directory)) {
 
 # Select TOP 10 biggest spenders for plotting
 # TEMPORARY SUBFILTER:
-# Filter out entities, which are not current 2021 election candidates
+# Filter out entities, which are not current 2021 election candidates (General Pavel, Milion Chvilek)
 top_10_spenders <- summary_dataset %>%
   filter(!page_id %in% c(102389958091735, 728495140691300)) %>% 
+	# Filtering out individual politicians - these top 10 are among political parties only
+	filter(!page_id %in% c(179497582061065,
+												 487445514669670,
+												 134443820058669,
+												 356451014434612,
+												 197010357446014,
+												 1434319750128022,
+												 214827221987263,
+												 146713862010620,
+												 553773474671244,
+												 102844685102730,
+												 103430204491217,
+												 495496033796328,
+												 356448681873897,
+												 100102138818077,
+												 1795946254027412,
+												 275042429350706,
+												 104264008348176,
+												 114474108677288,
+												 384187235387895,
+												 112718776235,
+												 301147597357008,
+												 108697510778834,
+												 156945169098,
+												 101894271393926,
+												 1414644678821208,
+												 101894271393926,
+												 351488672592066,
+												 108697510778834,
+												 466459903794526,
+												 1917661888252695,
+												 2108659169383946,
+												 424122987643945,
+												 1681478228766601,
+												 317802208282505,
+												 326507470746765,
+												 277957209202178)) %>% 
+  slice_max(avg_spend, n = 10) %>%
+  select(page_name, page_id, avg_spend)
+
+top_10_spenders_individuals <- summary_dataset %>%
+  filter(!page_id %in% c(102389958091735, 728495140691300)) %>% 
+	# Filtering out political parties - this top 10 is for individual politicians
+	filter(page_id %in% c(179497582061065,
+												 487445514669670,
+												 134443820058669,
+												 356451014434612,
+												 197010357446014,
+												 1434319750128022,
+												 214827221987263,
+												 146713862010620,
+												 553773474671244,
+												 102844685102730,
+												 103430204491217,
+												 495496033796328,
+												 356448681873897,
+												 100102138818077,
+												 1795946254027412,
+												 275042429350706,
+												 104264008348176,
+												 114474108677288,
+												 384187235387895,
+												 112718776235,
+												 301147597357008,
+												 108697510778834,
+												 156945169098,
+												 101894271393926,
+												 1414644678821208,
+												 101894271393926,
+												 351488672592066,
+												 108697510778834,
+												 466459903794526,
+												 1917661888252695,
+												 2108659169383946,
+												 424122987643945,
+												 1681478228766601,
+												 317802208282505,
+												 326507470746765,
+												 277957209202178)) %>% 
   slice_max(avg_spend, n = 10) %>%
   select(page_name, page_id, avg_spend)
 
@@ -252,7 +331,7 @@ Trends
 Column {.tabset}
 -----------------------------------------------------------------------
 
-### **SPENDING OVER TIME**
+### **SPENDING OVER TIME (Organizations)**
 
 ```{r}
 spend_over_time <- ggplotly(
@@ -290,7 +369,45 @@ saveWidget(spend_over_time, file = paste0(directory, "/plot_spend_over_time.html
 
 ```
 
-### **SPENDING WEEKLY**
+### **SPENDING OVER TIME (Individuals)**
+
+```{r}
+spend_over_time_individuals <- ggplotly(
+  time_dataset %>%
+    filter(page_id %in% top_10_spenders_individuals$page_id) %>%
+    mutate(
+      ad_creation_time_week = as.Date(cut(ad_creation_time, breaks = "week", start.on.monday = TRUE)) + 4,
+      cumulative_spend_million = round((cumulative_spend / 1000000), digits = 3)
+    ) %>%
+    group_by(page_name, ad_creation_time_week) %>%
+    summarise(end_of_week_million_spend = max(cumulative_spend_million)) %>%
+    ungroup() %>%
+    ggplot(aes(x = ad_creation_time_week, y = end_of_week_million_spend, color = page_name)) +
+    geom_line() +
+    geom_point(size = 0.8) +
+    geom_vline(aes(xintercept = as.numeric(election_date)), color = "#db1d0b") +
+    geom_text(aes(x = election_date, y = 0.2, label = "elections"), color = "#03457f", size = 4) +
+    theme_minimal() +
+    scale_y_continuous(
+      breaks = seq(0, 5, 0.25),
+      labels = seq(0, 5, 0.25)
+    ) +
+    scale_x_date(date_breaks = "1 months", date_labels = "%d.%m.%y") +
+    coord_cartesian(xlim = c(start_date, end_date), expand = TRUE) +
+    theme(legend.title = element_blank(), axis.text.x = element_text(angle = 45, hjust = 1)) +
+    xlab(element_blank()) +
+    ylab("CZK million") +
+  	labs(color = "") +
+    ggtitle(paste("Spending (in CZK million) on Ads of 10 biggest spenders since", format(start_date, "%d.%m.%Y")))
+)
+
+spend_over_time_individuals
+
+saveWidget(spend_over_time_individuals, file = paste0(directory, "/plot_spend_over_time_individuals.html"))
+
+```
+
+### **SPENDING WEEKLY (Organizations)**
 
 ```{r}
 spend_weekly <- ggplotly(
@@ -323,6 +440,42 @@ spend_weekly <- ggplotly(
 spend_weekly
 
 saveWidget(spend_weekly, file = paste0(directory, "/plot_spend_weekly.html"))
+
+```
+
+### **SPENDING WEEKLY (Individuals)**
+
+```{r}
+spend_weekly_individuals <- ggplotly(
+  time_dataset %>%
+    filter(page_id %in% top_10_spenders_individuals$page_id) %>%
+    mutate(
+      end_of_week = as.Date(cut(ad_creation_time, breaks = "week", start.on.monday = TRUE)) + 4,
+    ) %>%
+    group_by(page_name, end_of_week) %>% 
+    summarise(by_week_thousands_spend = round(sum(avg_spend) / 1000, digits = 0)) %>% 
+    ungroup() %>% 
+    ggplot(aes(x = end_of_week, y = by_week_thousands_spend, fill = page_name)) +
+    geom_col(width = 5.5) +
+    geom_vline(aes(xintercept = as.numeric(election_date)), color = "#db1d0b") +
+    geom_text(aes(x = election_date, y = 0.2, label = "elections"), color = "#03457f", size = 4) +
+    theme_minimal() +
+    scale_y_continuous(
+      breaks = seq(0, 5000, 200),
+      labels = seq(0, 5000, 200)
+    ) +
+    scale_x_date(date_breaks = "1 months", date_labels = "%d.%m.%y") +
+    coord_cartesian(xlim = c(start_date, end_date), expand = TRUE) +
+    theme(legend.title = element_blank(), axis.text.x = element_text(angle = 45, hjust = 1)) +
+    xlab(element_blank()) +
+    ylab("CZK thousand") +
+  	labs(fill = "") +
+    ggtitle(paste("Weekly spending (in CZK thousand) on Ads of 10 biggest spenders since", format(start_date, "%d.%m.%Y")))
+)
+
+spend_weekly_individuals
+
+saveWidget(spend_weekly_individuals, file = paste0(directory, "/plot_spend_weekly_individuals.html"))
 
 ```
 
@@ -362,7 +515,7 @@ saveWidget(plot_gender, file = paste0(directory, "/plot_gender.html"))
 
 ```
 
-### **AGE**
+### **AGE (Organizations)**
 
 ```{r}
 plot_age <- ggplotly(
@@ -401,7 +554,46 @@ saveWidget(plot_age, file = paste0(directory, "/plot_age.html"))
 
 ```
 
-### **REGION**
+### **AGE (Individuals)**
+
+```{r}
+plot_age_individuals <- ggplotly(
+  summary_dataset %>%
+    filter(page_id %in% top_10_spenders_individuals$page_id) %>%
+    select(
+      page_name,
+      avg_18_24,
+      avg_25_34,
+      avg_35_44,
+      avg_45_54,
+      avg_55_64,
+      avg_65_plus
+    ) %>%
+    pivot_longer(cols = 2:7, names_to = "age_group", values_to = "proportion", values_drop_na = TRUE) %>%
+    ggplot(aes(x = age_group, y = proportion, fill = page_name)) +
+    geom_col(position = "dodge2") +
+    scale_x_discrete(labels = c("18-24", "25-34", "35-44", "45-54", "55-64", "65+")) +
+    scale_fill_brewer(palette = "Paired") +
+    scale_y_continuous(
+      limits = c(0, 0.5),
+      breaks = seq(0, 0.5, 0.1),
+      labels = c("0%", "10%", "20%", "30%", "40%", "50%")
+    ) +
+    theme_minimal() +
+    theme(legend.title = element_blank()) +
+    xlab(element_blank()) +
+    ylab(element_blank()) +
+  	labs(fill = "") +
+    ggtitle(paste("Proportion of Ads of 10 biggest spenders targeting specific age group since", format(start_date, "%d.%m.%Y")))
+)
+
+plot_age_individuals
+
+saveWidget(plot_age_individuals, file = paste0(directory, "/plot_age_individuals.html"))
+
+```
+
+### **REGION (Organizations)**
 
 ```{r}
 plot_region <- ggplotly(
@@ -445,6 +637,53 @@ plot_region <- ggplotly(
 plot_region
 
 saveWidget(plot_region, file = paste0(directory, "/plot_region.html"))
+
+```
+
+### **REGION (Individuals)**
+
+```{r}
+plot_region_individuals <- ggplotly(
+  summary_dataset %>%
+    filter(page_id %in% top_10_spenders_individuals$page_id) %>%
+    select(
+      page_name,
+      avg_pha,
+      avg_stc,
+      avg_jhc,
+      avg_plk,
+      avg_kvk,
+      avg_ulk,
+      avg_lbk,
+      avg_hkk,
+      avg_pak,
+      avg_vys,
+      avg_jhm,
+      avg_olk,
+      avg_msk,
+      avg_zlk
+    ) %>%
+    pivot_longer(cols = 2:15, names_to = "region_group", values_to = "proportion", values_drop_na = TRUE) %>%
+    ggplot(aes(x = region_group, y = proportion, fill = page_name)) +
+    geom_col(position = "dodge2") +
+    scale_x_discrete(labels = c("HKK", "JHC", "JHM", "KVK", "LBK", "MSK", "OLK", "PAK", "PHA", "PLK", "STC", "ULK", "VYS", "ZLK")) +
+    scale_fill_brewer(palette = "Paired") +
+    scale_y_continuous(
+      limits = c(0, 0.5),
+      breaks = seq(0, 0.5, 0.1),
+      labels = c("0%", "10%", "20%", "30%", "40%", "50%")
+    ) +
+    theme_minimal() +
+    theme(legend.title = element_blank()) +
+    xlab(element_blank()) +
+    ylab(element_blank()) +
+  	labs(fill = "") +
+    ggtitle(paste("Proportion of Ads of 10 biggest spenders targeting specific region since", format(start_date, "%d.%m.%Y")))
+)
+
+plot_region_individuals
+
+saveWidget(plot_region_individuals, file = paste0(directory, "/plot_region_individuals.html"))
 
 ```
 
